src/main/java/com/example/tareaspring/errors/ErrorResponse.java
package com.example.tareaspring.errors;

import lombok.AllArgsConstructor;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Setter
@AllArgsConstructor
@NoArgsConstructor
public class ErrorResponse {
    private String message;
}
